# detkit

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  action.yml  detkit-demo.tape  detkit-navigator.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
detkit/: __init__.py  attack_enterprise.json  cli.py  docs.py  evaluator.py
examples/rules/: powershell_encoded_command.test.yml  powershell_encoded_command.yml  whoami_execution.test.yml  whoami_execution.yml
tests/: test_cli_json.py  test_docs.py  test_evaluator.py
