[project]
name = "detkit"
version = "0.1.0"
description = "dbt for detections — test, validate, and CI-gate Sigma detection rules as code."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "detkit" }]
keywords = [
    "sigma", "detection-engineering", "detection-as-code",
    "siem", "security", "detections", "blue-team", "cybersecurity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/detkit/detkit"
Repository = "https://github.com/detkit/detkit"
Issues = "https://github.com/detkit/detkit/issues"

[project.scripts]
detkit = "detkit.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["detkit*"]
