[project]
name = "detkit-cli"
dynamic = ["version"]        
description = "dbt for detections — test, validate, and CI-gate Sigma detection rules as code."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "detkit" }]
keywords = [
    "sigma", "detection-engineering", "detection-as-code",
    "siem", "security", "detections", "blue-team", "cybersecurity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/ELSATOAH/detkit"
Repository = "https://github.com/ELSATOAH/detkit"
Issues = "https://github.com/ELSATOAH/detkit/issues"

[project.scripts]
detkit = "detkit.cli:main"

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["detkit*"]

[tool.setuptools.package-data]
detkit = ["*.json"]

[tool.setuptools_scm]
